# rmidimap

./: Cargo.toml  FORMAT.md  README.md
examples/: vmpk.yml
src/: cli.rs  constant.rs  error.rs  event.rs  eventmap.rs  main.rs  run.rs  util.rs
src/config/: device.rs  event.rs  mod.rs  run.rs
src/config/serializer/: device.rs  event.rs  eventenv.rs  mod.rs  run.rs
src/midi/: alsa.rs  builder.rs  driver.rs  input.rs  mod.rs  port.rs  portfilter.rs
src/midi/backend/: alsa.rs  mod.rs
src/util/: mod.rs  range.rs  remap.rs  smartset.rs
test/: vmpk.yml
