[package]
name = "rmidimap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
num-traits = "0.2"
num = "0.4"
lazy_static = "1.4"
clap = { version = "4.1", features = ["derive"] }
thiserror = "1.0"
enum-display-derive = "0.1"
queues = "1.1"
duration-str = { version = "0.5", features = ["serde"] }
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"
libc = "0.2.21"
